# evm-amm-state

./: CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  ROADMAP.md
.cargo/: audit.toml
.github/workflows/: ci.yml  live-base.yml  live.yml
benches/: live_runtime_actor.rs  pool_routing.rs  reactive_apply.rs  runtime_lifecycle.rs  simulation.rs  swap_sim.rs
docs/: adapter-spec.md  benchmarks.md  curve-adapter.md  curve-slice2-cryptoswap-spec.md  curve-slice3-liquidity-events-spec.md  curve-slice4-tricrypto-ng-spec.md  curve-stableswap-adapter-spec.md  e2e-ws1-reactive-coverage-spec.md  e2e-ws2-adapter-swap-sim-spec.md  e2e-ws3-cut-legacy-spec.md  factory-discovery-spec.md  hardening-1-v3-multiword-tick-scan-spec.md  hardening-2-deferred-work-driver-spec.md  hardening-4-solidly-v2-adapter-spec.md  high-performance-bootstrap-defaults.md  live-runtime-baselines.md  live-runtime-cache-actor.md  live-runtime-domain.md  live-runtime-lifecycle.md  live-runtime-master-plan.md  live-runtime-ownership.md  live-runtime-progressive-cold-start.md  phase-a0-tech-spec.md  phase-a1-tech-spec.md  phase-a2-tech-spec.md  phase-a3-checkpoint.md  phase-a3-tech-spec.md  phase-a4-slice1-spec.md  phase-a4-slice2-spec.md  phase-s0-feature-split.md  pool-discovery.md  protocol-support-matrix.md  trace-backed-sync.md  warm-resume.md  writing-an-adapter.md
examples/: adapter_pipeline.rs  amms.toml  arbitrage_cross_dex.rs  arbitrage_triangular.rs  curve_cold_start_phases.rs  custom_adapter.rs  declarative_discovery.rs  event_subscription.rs  factory_discovery_live.rs  programmatic_loading.rs  sync_latency.rs  token_basket_bench.rs  toml_loading.rs  trace_resync_latency.rs  triangular_arbitrage.rs  v3_full_sync.rs  verified_bytecode_seed.rs
scripts/: stage10-base-live-gates.sh  stage10-live-gates.sh
src/: amm_wrapper.rs  balancer_pool.rs  balancer_v3_pool.rs  configured_amms.rs  cryptoswap_math.rs  curve_pool.rs  data.rs  discovery.rs  lib.rs  progress.rs  slipstream_pool.rs  solidly_v2_pool.rs  stableswap_math.rs  tuning.rs  uniswap_v4_pool.rs
src/adapters/: balancer_v2.rs  bytecode.rs  cache.rs  cold_start.rs  cold_start_scheduler.rs  curve.rs  driver.rs  factory.rs  live_runtime.rs  mod.rs  ownership.rs  persistence.rs  prepared.rs  reactive.rs  registry.rs  repair.rs  runtime.rs  sim.rs  snapshot.rs  solidly_v2.rs  state.rs  storage.rs  storage_sync.rs  subscriber_driver.rs  sync_manager.rs  traits.rs  types.rs  uniswap_v2.rs  uniswap_v3.rs  v3_sync.rs
src/cache_sync/: adaptive_prefetch.rs  balancer_sync.rs  balancer_v3_sync.rs  compat.rs  curve_sync.rs  decode.rs  freshness.rs  mod.rs  slipstream_sync.rs  solidly_v2_sync.rs  v2_sync.rs  v3_bitmap.rs  v3_sync.rs
src/events/: mod.rs
src/routing/: mod.rs
tests/: access_list_discovery_rpc.rs  adapter_a1.rs  adapter_core.rs  adapter_reactive.rs  adapter_swap_sim.rs  adapter_swap_sim_rpc.rs  adapter_sync_manager.rs  balancer_liquidity_rpc.rs  bootstrap_many.rs  bytecode_golden.rs  code_seed_semantics.rs  cold_start_adoption.rs  cold_start_priority.rs  cold_start_worker.rs  custom_adapter.rs  discovery.rs  discovery_cl.rs  discovery_cl_rpc.rs  discovery_curve.rs  discovery_curve_rpc.rs  discovery_solidly.rs  discovery_solidly_rpc.rs  discovery_wiring.rs  facade_typing.rs  factory_batch.rs  factory_discovery.rs  factory_multi.rs  live_runtime.rs  metadata_builders.rs  pipeline_e2e.rs  reactive_curve_ws_e2e.rs  reactive_ws_e2e.rs  registration_persistence.rs  runtime_domain.rs  runtime_ownership.rs  snapshot.rs  stage6_pool_refresh.rs  stage6_repair.rs  storage_sync.rs  token_basket.rs  (+3 more)
tests/fixtures/: MockBalancerVault.sol  MockBalancerVault3.sol  MockBalancerVaultNoSlot.sol  MockBalancerVaultQuote.sol  MockCurvePool.sol  MockSolidlyPool.sol  MockV2Router.sol  MockV3Quoter.sol  mock_balancer_vault_3_runtime.hex  mock_balancer_vault_noslot_runtime.hex  mock_balancer_vault_quote_runtime.hex  mock_balancer_vault_revert_runtime.hex  mock_balancer_vault_runtime.hex  mock_curve_pool_runtime.hex  mock_solidly_pool_runtime.hex  mock_v2_router_runtime.hex  mock_v3_quoter_runtime.hex
