[package]
name = "evm-amm-state"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "EVM-backed AMM state loading, cache synchronization, and pool simulation models"
keywords = ["evm", "amm", "defi", "uniswap", "revm"]
categories = ["cryptography::cryptocurrencies", "simulation", "caching"]
readme = "README.md"
repository = "https://github.com/KaiCode2/evm-amm-state"
documentation = "https://docs.rs/evm-amm-state"

# Standalone workspace root: keeps this crate from being absorbed by any
# ancestor-directory workspace and gives it its own Cargo.lock.
[workspace]

[features]
# The adapters pipeline over the finished protocols.
default = ["adapters", "uniswap-v2", "uniswap-v3", "balancer-v2", "solidly-v2", "curve"]

# --- Dependency tiers ---
# Protocol-neutral adapter infrastructure (cold-start, reactive, sim, cache
# orchestration). Always compiled; this marker carries no heavy deps.
adapters = []

# --- Per-protocol ADAPTER flags ---
# These gate the protocol *adapter* modules in `src/adapters/`.
uniswap-v2 = ["adapters"]
uniswap-v3 = ["adapters"]
pancake-v3 = ["uniswap-v3"] # served by the V3-family adapter
slipstream = ["uniswap-v3"] # served by the V3-family adapter
balancer-v2 = ["adapters"]
solidly-v2 = ["adapters"] # Aerodrome / Velodrome V2 reserves pools
curve = ["adapters"]      # Curve StableSwap plain pools (get_dy)

[dependencies]
# Companion crate. Consumed as a git dependency while the sibling repo is
# private and unpublished. At publish time drop `git`/`rev` and keep the
# crates.io `version`.
# INTERIM: pinned to the `cold-start-sync` branch tip (903af3d = base 27ae8762 +
# the additive cold-start module) while evm-fork-cache#12 is in review. Re-pin to
# the `main` merge commit before this consumer work merges to evm-amm-state main.
evm-fork-cache = { git = "ssh://git@github.com/KaiCode2/evm-fork-cache.git", rev = "903af3df887bf5718693d4bacf770552681e5273", version = "0.1" }

alloy-transport-balancer = { version = "0.1.2", default-features = false, features = ["balancer"] }

alloy-contract = "1.0.38"
alloy-eips = "1.0.38"
alloy-network = "1.0.38"
alloy-primitives = { version = "1.4", features = ["map"] }
alloy-provider = "1.0.38"
alloy-rpc-types-eth = "1.0.38"
alloy-sol-types = "1.4"

anyhow = "1.0.98"
foundry-fork-db = "0.22"
futures = "0.3"
revm = { version = "34.0", features = ["std", "serde", "optional_eip3607", "optional_no_base_fee"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.41"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }

[dev-dependencies]
alloy-rpc-client = "1.0.38"
alloy-transport = "1.0.38"
# Examples/tests subscribe to a live node over WebSockets; enable the pubsub transport.
alloy-provider = { version = "1.0.38", features = ["ws"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
# Benchmark harness. `default-features = false` drops criterion's `rayon` +
# `plotters` deps — keeps the build lean and, since the crate deliberately ships
# without rayon, avoids reintroducing it even in the dev/bench build.
criterion = { version = "0.5", default-features = false }

# Runnable adapters-path demo: register -> cold-start -> WS event subscribe ->
# reactive apply -> simulate_swap. Env-gated; no-ops if the RPC/WS URL is unset.
[[example]]
name = "adapter_pipeline"
required-features = ["uniswap-v2"]

# Adapter integration tests build against the per-protocol adapters; gate them
# so the adapter-only build runs them only when those adapters are enabled.
[[test]]
name = "adapter_a1"
required-features = ["uniswap-v2", "uniswap-v3", "balancer-v2"]

[[test]]
name = "adapter_reactive"
required-features = ["uniswap-v2", "uniswap-v3", "balancer-v2", "solidly-v2", "curve"]

[[test]]
name = "cold_start_adoption"
required-features = ["uniswap-v2", "uniswap-v3", "balancer-v2", "solidly-v2", "curve"]

[[test]]
name = "pipeline_e2e"
required-features = ["uniswap-v2", "uniswap-v3", "balancer-v2"]

[[test]]
name = "adapter_swap_sim"
required-features = ["uniswap-v2", "uniswap-v3", "balancer-v2", "solidly-v2", "curve"]

[[test]]
name = "adapter_swap_sim_rpc"
required-features = ["uniswap-v2", "uniswap-v3", "balancer-v2", "solidly-v2", "curve"]

[[test]]
name = "reactive_ws_e2e"
required-features = ["uniswap-v2"]

[[test]]
name = "reactive_curve_ws_e2e"
required-features = ["curve"]

# RPC-warmed micro-benchmarks for the offline hot path (simulate_swap per
# protocol + reactive event apply). Env-gated: no-ops without E2E_RPC_URL.
[[bench]]
name = "swap_sim"
harness = false
required-features = ["uniswap-v2", "uniswap-v3", "balancer-v2", "solidly-v2", "curve"]

# End-to-end arbitrage examples (env-gated; need an archive RPC to warm state).
[[example]]
name = "arbitrage_cross_dex"
required-features = ["uniswap-v2", "uniswap-v3", "curve"]

[[example]]
name = "arbitrage_triangular"
required-features = ["uniswap-v3", "curve"]
