[package]
name = "evm-amm-state"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "EVM-backed AMM state loading, cache synchronization, and pool simulation models"
keywords = ["evm", "amm", "defi", "uniswap", "revm"]
categories = ["cryptography::cryptocurrencies", "simulation", "caching"]
readme = "README.md"
repository = "https://github.com/KaiCode2/evm-amm-state"
documentation = "https://docs.rs/evm-amm-state"

# Ship a lean crate: keep src + runnable examples + the user-facing guides
# (docs/benchmarks.md, docs/curve-adapter.md), drop the internal test suite,
# CI config, maintainer docs, and the superseded per-slice/phase design specs.
# (gitignore-style patterns, relative to the package root.)
#
# NOTE: `exclude` must stay in the `[package]` table. If it is written *after*
# a `[package.metadata.*]` header, TOML reparents it to that sub-table and
# Cargo silently ignores it — shipping everything.
exclude = [
    "tests/",
    ".github/",
    "ROADMAP.md",
    "RELEASING.md",
    "docs/*-spec.md",
    "docs/phase-*.md",
]

# Build docs.rs with every feature enabled so the `uniswap-v3`-gated `v3_sync`
# module and the `experimental-protocols` identities render.
[package.metadata.docs.rs]
all-features = true

# Standalone workspace root: keeps this crate from being absorbed by any
# ancestor-directory workspace and gives it its own Cargo.lock.
[workspace]

[features]
# The adapters pipeline over the finished protocols.
default = ["adapters", "uniswap-v2", "uniswap-v3", "balancer-v2", "solidly-v2", "curve"]

# --- Dependency tiers ---
# Protocol-neutral adapter infrastructure (cold-start, reactive, sim, cache
# orchestration). Always compiled; this marker carries no heavy deps.
adapters = []

# --- Per-protocol ADAPTER flags ---
# These gate the protocol *adapter* modules in `src/adapters/`.
uniswap-v2 = ["adapters"]
uniswap-v3 = ["adapters"]
pancake-v3 = ["uniswap-v3"] # served by the V3-family adapter
slipstream = ["uniswap-v3"] # served by the V3-family adapter
balancer-v2 = ["adapters"]
solidly-v2 = ["adapters"] # Aerodrome / Velodrome V2 reserves pools
curve = ["adapters"]      # Curve StableSwap plain pools (get_dy)

# Reserved protocol identities (BalancerV3 / Erc4626 / UniswapV4) with no adapter
# yet; off by default so the default surface only advertises implemented protocols.
experimental-protocols = []

[dependencies]
# Companion crate. Uses the public 0.2.0 release for bulk storage extraction,
# custom storage programs, typed errors, and reactive resync support.
evm-fork-cache = "0.2.0"

alloy-eips = "1.0.38"
alloy-network = "1.0.38"
alloy-primitives = { version = "1.4", features = ["map"] }
alloy-provider = "1.0.38"
alloy-rpc-types-eth = "1.0.38"
alloy-sol-types = "1.4"

revm = { version = "34.0", features = ["std", "serde", "optional_eip3607", "optional_no_base_fee"] }

[dev-dependencies]
alloy-rpc-client = "1.0.38"
alloy-transport = "1.0.38"
alloy-transport-http = "1.0.38"
# Tests/examples use anyhow::Result as their top-level error; the library's
# public surface is typed (CacheError / DriverError / SimError / ...) and has
# no anyhow anywhere in its normal dependency graph.
anyhow = "1.0.98"
# Examples/tests drive async subscriptions and stream combinators.
futures = "0.3"
# Gzip-capable HTTP client for the v3_full_sync example: sync-program
# responses are hundreds of KB of nonzero storage words and compress ~3x
# (see evm-fork-cache/docs/bulk-storage-extraction.md).
reqwest = { version = "0.12", default-features = false, features = ["gzip"] }
# Examples/tests subscribe to a live node over WebSockets; enable the pubsub transport.
alloy-provider = { version = "1.0.38", features = ["ws"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
# Benchmark harness. `default-features = false` drops criterion's `rayon` +
# `plotters` deps — keeps the build lean and, since the crate deliberately ships
# without rayon, avoids reintroducing it even in the dev/bench build.
criterion = { version = "0.5", default-features = false }

# Runnable adapters-path demo: register -> cold-start -> WS event subscribe ->
# reactive apply -> simulate_swap. Env-gated; no-ops if the RPC/WS URL is unset.
[[example]]
name = "adapter_pipeline"
required-features = ["uniswap-v2"]

# From-scratch third-party-adapter demo: define a novel AMM (Custom protocol id /
# pool key / metadata) entirely outside the crate, register it, and quote. Fully
# self-contained — local math, no RPC, no env vars. Only needs the `adapters`
# marker (all types used are always-compiled core), so it builds under `default`
# and is correctly skipped when `adapters` is off.
[[example]]
name = "custom_adapter"
required-features = ["adapters"]

# Adapter integration tests build against the per-protocol adapters; gate them
# so the adapter-only build runs them only when those adapters are enabled.
[[test]]
name = "adapter_a1"
required-features = ["uniswap-v2", "uniswap-v3", "balancer-v2"]

[[test]]
name = "discovery"
required-features = ["uniswap-v2", "uniswap-v3"]

[[test]]
name = "bytecode_golden"
required-features = ["uniswap-v2", "uniswap-v3"]

[[test]]
name = "code_seed_semantics"
required-features = ["uniswap-v2"]

[[test]]
name = "bootstrap_many"
required-features = ["uniswap-v2", "uniswap-v3", "curve"]

[[test]]
name = "adapter_reactive"
required-features = ["uniswap-v2", "uniswap-v3", "balancer-v2", "solidly-v2", "curve"]

[[test]]
name = "adapter_sync_manager"
required-features = ["curve", "balancer-v2"]

[[test]]
name = "cold_start_adoption"
required-features = ["uniswap-v2", "uniswap-v3", "balancer-v2", "solidly-v2", "curve"]

[[test]]
name = "pipeline_e2e"
required-features = ["uniswap-v2", "uniswap-v3", "balancer-v2"]

[[test]]
name = "adapter_swap_sim"
required-features = ["uniswap-v2", "uniswap-v3", "balancer-v2", "solidly-v2", "curve"]

[[test]]
name = "adapter_swap_sim_rpc"
required-features = ["uniswap-v2", "uniswap-v3", "balancer-v2", "solidly-v2", "curve"]

# Offline revm execution of the generated V3 one-shot sync programs.
[[test]]
name = "v3_sync"
required-features = ["uniswap-v3"]

# Live parity for the one-shot V3 sync (env-gated, #[ignore]): state, quote,
# and partial-window equivalence against on-chain ground truth.
[[test]]
name = "v3_full_sync_rpc"
required-features = ["uniswap-v3"]

[[test]]
name = "reactive_ws_e2e"
required-features = ["uniswap-v2"]

[[test]]
name = "reactive_curve_ws_e2e"
required-features = ["curve"]

# RPC-warmed micro-benchmarks for the offline hot path (simulate_swap per
# protocol + reactive event apply). Env-gated: no-ops without E2E_RPC_URL.
[[bench]]
name = "swap_sim"
harness = false
required-features = ["uniswap-v2", "uniswap-v3", "balancer-v2", "solidly-v2", "curve"]

# One-shot V3 full-pool sync via a generated eth_call storage program:
# the whole tick range + observation ring in a single call, quote-parity
# checked against the classic windowed cold start (env-gated).
[[example]]
name = "v3_full_sync"
required-features = ["uniswap-v3"]

# Manual live proof that embedded AMM bytecodes can be seeded into EvmCache and
# verified once against on-chain code hashes.
[[example]]
name = "verified_bytecode_seed"
required-features = ["uniswap-v2", "uniswap-v3"]

# Benchmark: declarative token-basket pool discovery (one bulk eth_call for all
# pairs across both factories) vs naive per-pair scans. Env-gated on E2E_RPC_URL.
[[example]]
name = "token_basket_bench"
required-features = ["uniswap-v2", "uniswap-v3"]

# Live factory discovery -> cold-start -> reactive subscription demo for
# Ethereum Uniswap V2 + V3 USDC/WETH pools. Env-gated; no-ops without
# E2E_RPC_URL.
[[example]]
name = "factory_discovery_live"
required-features = ["uniswap-v2", "uniswap-v3"]

# Live sync-latency comparison for prior cold-start versus one-shot storage
# programs across V3, V2, Balancer, and Curve. Env-gated; defaults to a public
# Ethereum endpoint when E2E_RPC_URL is unset.
[[example]]
name = "sync_latency"
required-features = ["uniswap-v2", "uniswap-v3", "balancer-v2", "curve"]

# Live event-time resync comparison for a real Curve event: trace-only resync
# versus forced storage-fetch fallback. Env-gated by endpoint availability.
[[example]]
name = "trace_resync_latency"
required-features = ["curve"]

# End-to-end arbitrage examples (env-gated; need an archive RPC to warm state).
[[example]]
name = "arbitrage_cross_dex"
required-features = ["uniswap-v2", "uniswap-v3", "curve"]

[[example]]
name = "arbitrage_triangular"
required-features = ["uniswap-v3", "curve"]
